--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0px;
+    padding: 0px;
+}
 /* login */
 .login > h1 {
     text-align: center;
@@ -28,12 +32,12 @@
     border-radius: 10px;
 }
 
-.login > div.mdiv > div.div_role {
+.login > div.mdiv > div.roles {
     clear: both;
     margin: 0%;
 }
 
-.login > div.mdiv > div.div_role > button {
+.login > div.mdiv > div.roles > button {
     padding: 5% 0 5% 0;
     margin-left: 4%;
     float: left;
@@ -45,17 +49,17 @@
     border-radius: 5px;
 }
 
-.login > div.mdiv > div.div_inputs {
+.login > div.mdiv > div.inputs {
     clear: both;
     margin-top: 30%;
 }
 
-.login > div.mdiv > div.div_inputs > div.div_input {
+.login > div.mdiv > div.inputs > div {
     margin-top: 3%;
     text-align: center;
 }
 
-.login > div.mdiv > div.div_inputs > div.div_input > input {
+.login > div.mdiv > div.inputs > div > input {
     width: 90%;
     padding: 1%;
     margin-bottom: 1%;
@@ -71,4 +75,173 @@
     margin-left: 10%;
     cursor: pointer;
     border-radius: 5px;
+}
+
+/* platform */
+.platform > div.menu {
+    background-color:  #e9e9e9;
+    padding: 1%;
+    overflow: hidden;
+}
+
+.platform > div.menu > p.title {
+    float: left;
+    text-align: left;
+    color: #88abda;
+    font-weight: bold;
+}
+
+.platform > div.menu > p.option_left {
+    float: left;
+    text-align: left;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.platform > div.menu > p.option_right {
+    float: right;
+    text-align: right;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.platform > div.free_course {
+    margin: 3%;
+}
+
+.platform > div.free_course > h1 {
+    text-align: center;
+    color: #88abda;
+}
+
+.platform > div.free_course > a {
+    clear: both;
+    float: right;
+    text-align: right;
+    color: #88abda;
+}
+
+.platform > div.free_course > div.course {
+    float: left;
+    width: 22%;
+    margin-left: 2.4%;
+    margin-top: 1%;
+    background-color: #f7f7f7;
+    border: #88abda solid 1px;
+    border-radius: 5%;
+}
+
+.platform > div.free_course > div.course > p.title {
+    color: #88abda;
+    text-align: center;
+}
+
+.platform > div.free_course > div.course > div.v1 {
+    padding: 5%;
+}
+
+.platform > div.free_course > div.course > div.v1 > p {
+    font-weight: bold;
+    float: left;
+}
+
+.platform > div.free_course > div.course > div.v1 > p.duration {
+    margin-left: 5%;
+}
+
+.platform > div.free_course > div.course > div.v1 > p.price {
+    float: right;
+    text-align: right;
+    margin-left: 5%;
+    color: red;
+}
+
+.platform > div.free_course > div.course > div.v2 {
+    clear: both;
+    padding: 5%;
+}
+
+.platform > div.free_course > div.course > div.v2 > p.sales {
+    float: right;
+    text-align: right;
+}
+
+.platform > div.free_course > div.course > div.v2 > p.tch {
+    float: left;
+    text-align: left;
+}
+
+.platform > div.free_course > div.course > a {
+    color: #88abda;
+}
+
+.platform > div.paid_course {
+    clear: both;
+    margin: 3%;
+}
+
+.platform > div.paid_course > h1 {
+    text-align: center;
+    color: #88abda;
+}
+
+.platform > div.paid_course > a {
+    clear: both;
+    float: right;
+    text-align: right;
+    color: #88abda;
+}
+
+.platform > div.paid_course > div.course {
+    float: left;
+    width: 22%;
+    margin-left: 2.4%;
+    margin-top: 1%;
+    background-color: #f7f7f7;
+    border: #88abda solid 1px;
+    border-radius: 5%;
+}
+
+.platform > div.paid_course > div.course > p.title {
+    color: #88abda;
+    text-align: center;
+}
+
+.platform > div.paid_course > div.course > div.v1 {
+    padding: 5%;
+}
+
+.platform > div.paid_course > div.course > div.v1 > p {
+    font-weight: bold;
+    float: left;
+}
+
+.platform > div.paid_course > div.course > div.v1 > p.duration {
+    margin-left: 5%;
+}
+
+.platform > div.paid_course > div.course > div.v1 > p.price {
+    float: right;
+    text-align: right;
+    margin-left: 5%;
+    color: red;
+}
+
+.platform > div.paid_course > div.course > div.v2 {
+    clear: both;
+    padding: 5%;
+}
+
+.platform > div.paid_course > div.course > div.v2 > p.sales {
+    float: right;
+    text-align: right;
+}
+
+.platform > div.paid_course > div.course > div.v2 > p.tch {
+    float: left;
+    text-align: left;
+}
+
+.platform > div.paid_course > div.course > a {
+    color: #88abda;
 }
