--- a/web/tch/css/module.css
+++ b/web/tch/css/module.css
@@ -36,6 +36,10 @@
     text-align: center;
 }
 
+.platform > div.mdiv > div.inputs > div > select {
+    width: 90%;
+}
+
 .platform > div.mdiv > div.inputs > div > input {
     width: 90%;
     padding: 1%;
