--- a/web/stu/css/platform.css
+++ b/web/stu/css/platform.css
@@ -1,47 +1,22 @@
-.platform > div.menu {
-    background-color:  #e9e9e9;
-    padding: 1%;
-    overflow: hidden;
-}
-
-.platform > div.menu > p.title {
-    float: left;
-    text-align: left;
-    color: #88abda;
-    font-weight: bold;
-}
-
-.platform > div.menu > p.option_left {
-    float: left;
-    text-align: left;
-    margin-left: 20px;
-    cursor: pointer;
-}
-
-.platform > div.menu > p.option_right {
-    float: right;
-    text-align: right;
-    margin-right: 20px;
-    cursor: pointer;
-}
-
-.platform > div.free_course {
+.platform > div.course_preview {
     margin: 3%;
 }
 
-.platform > div.free_course > h1 {
+.platform > h1 {
+    clear: both;
     text-align: center;
     color: #88abda;
 }
 
-.platform > div.free_course > a {
+.platform > a {
     clear: both;
     float: right;
     text-align: right;
     color: #88abda;
+    margin-right: 5%;
 }
 
-.platform > div.free_course > div.course {
+.platform > div.course_preview > div.course {
     float: left;
     width: 22%;
     margin-left: 2.4%;
@@ -52,124 +27,49 @@
     cursor: pointer;
 }
 
-.platform > div.free_course > div.course > p.title {
+.platform > div.course_preview > div.course > p.title {
     color: #88abda;
     text-align: center;
 }
 
-.platform > div.free_course > div.course > div.v1 {
+.platform > div.course_preview > div.course > div.v1 {
     padding: 5%;
 }
 
-.platform > div.free_course > div.course > div.v1 > p {
+.platform > div.course_preview > div.course > div.v1 > p {
     float: left;
 }
 
-.platform > div.free_course > div.course > div.v1 > p.start_time {
+.platform > div.course_preview > div.course > div.v1 > p.start_time {
     font-weight: bold;
 }
 
-.platform > div.free_course > div.course > div.v1 > p.duration {
+.platform > div.course_preview > div.course > div.v1 > p.duration {
     margin-left: 3%;
 }
 
-.platform > div.free_course > div.course > div.v1 > p.price {
+.platform > div.course_preview > div.course > div.v1 > p.price {
     float: right;
     text-align: right;
     margin-left: 3%;
     color: red;
 }
 
-.platform > div.free_course > div.course > div.v2 {
+.platform > div.course_preview > div.course > div.v2 {
     clear: both;
     padding: 5%;
 }
 
-.platform > div.free_course > div.course > div.v2 > p.sales {
+.platform > div.course_preview > div.course > div.v2 > p.sales {
     float: right;
     text-align: right;
 }
 
-.platform > div.free_course > div.course > div.v2 > p.tch {
+.platform > div.course_preview > div.course > div.v2 > p.tch {
     float: left;
     text-align: left;
 }
 
-.platform > div.free_course > div.course > a {
-    color: #88abda;
-}
-
-.platform > div.paid_course {
-    clear: both;
-    margin: 3%;
-    cursor: pointer;
-}
-
-.platform > div.paid_course > h1 {
-    text-align: center;
-    color: #88abda;
-}
-
-.platform > div.paid_course > a {
-    clear: both;
-    float: right;
-    text-align: right;
-    color: #88abda;
-}
-
-.platform > div.paid_course > div.course {
-    float: left;
-    width: 22%;
-    margin-left: 2.4%;
-    margin-top: 1%;
-    background-color: #f7f7f7;
-    border: #88abda solid 1px;
-    border-radius: 5px;
-}
-
-.platform > div.paid_course > div.course > p.title {
-    color: #88abda;
-    text-align: center;
-}
-
-.platform > div.paid_course > div.course > div.v1 {
-    padding: 5%;
-}
-
-.platform > div.paid_course > div.course > div.v1 > p {
-    float: left;
-}
-
-.platform > div.paid_course > div.course > div.v1 > p.start_time {
-    font-weight: bold;
-}
-
-.platform > div.paid_course > div.course > div.v1 > p.duration {
-    margin-left: 3%;
-}
-
-.platform > div.paid_course > div.course > div.v1 > p.price {
-    float: right;
-    text-align: right;
-    margin-left: 3%;
-    color: red;
-}
-
-.platform > div.paid_course > div.course > div.v2 {
-    clear: both;
-    padding: 5%;
-}
-
-.platform > div.paid_course > div.course > div.v2 > p.sales {
-    float: right;
-    text-align: right;
-}
-
-.platform > div.paid_course > div.course > div.v2 > p.tch {
-    float: left;
-    text-align: left;
-}
-
-.platform > div.paid_course > div.course > a {
+.platform > div.course_preview > div.course > a {
     color: #88abda;
 }
